--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,45 @@
+/* Global Styles */
 body {
     font-family: "Montserrat", sans-serif;
 }
 
-/* Header */
+/* Header Styles */
+header {
+    background-color: #13161B;
+    padding: 0 60px;
+}
 
 #logo {
     width: 75px;
 }
 
-#header,
 .navbar {
-    padding: 0px 40px;
-    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.2);
+    padding: 0 60px;
 }
 
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    position: relative; 
-    padding: 0rem .8rem;
+    position: relative;
+    padding: 0 .8rem;
     font-weight: 600;
     cursor: pointer;
     height: 30px;
-    color: black;
+    color: #fff;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link::after {
     content: '';
     position: absolute;
-    left: 50%; 
-    bottom: -2px; 
+    left: 50%;
+    bottom: -2px;
     width: 0;
     height: 1px;
-    background-color: black;
+    background-color: #ffc107;
     transition: width 0.4s ease, left 0.4s ease;
+    margin-bottom: 4px;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:hover::after {
@@ -44,5 +48,203 @@ body {
 }
 
 
+#capa {
+    width: 100%;
+    background-image: url(../imgs/img_capa.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 50vh;
+}
+
+#textoCapa {
+    padding: 10px;
+    backdrop-filter: blur(1.2px);
+}
+
+
+
+/* Breakpoints */
+@media (min-width: 281px) and (max-width: 369px) {
+    #logo {
+        width: 45px;
+    }
+
+    header,
+    .navbar {
+        padding: 0 20px;
+    }
+
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-left: 5px;
+    }
+
+    #capa {
+        height: 30vh;
+        padding: 80px 0;
+    }
+
+    #capa h1 {
+        color: #ffc107;
+        font-size: 1.1em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #capa h3 {
+        color: white;
+        font-size: 0.6em;
+        text-align: center;
+        font-weight: 700;
+    }
+
+
+}
+
+/*Extra small devices (portrait phones, less than 401px)*/
+@media (min-width: 370px) and (max-width: 575.98px) {
+    #logo {
+        width: 50px;
+    }
+
+    header,
+    .navbar {
+        padding: 0 20px;
+    }
+
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-left: 5px;
+    }
+
+    #capa {
+        height: 30vh;
+        padding: 80px 0;
+    }
+
+    #capa h1 {
+        color: #ffc107;
+        font-size: 1.7em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #capa h3 {
+        color: white;
+        font-size: 1.1em;
+        text-align: center;
+        font-weight: 700;
+    }
+
+
+}
+
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) {
+    #logo {
+        width: 60px;
+    }
+
+    header,
+    .navbar {
+        padding: 0 20px;
+    }
+
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-left: 5px;
+    }
+
+    #capa {
+        height: 30vh;
+        padding: 80px 0;
+    }
+
+    #capa h1 {
+        color: #ffc107;
+        font-size: 2em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #capa h3 {
+        color: white;
+        font-size: 1.4em;
+        text-align: center;
+        font-weight: 700;
+    }
+
+
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991.98px) {
+    #logo {
+        width: 55px;
+    }
+
+    header,
+    .navbar {
+        padding: 0 20px;
+    }
+
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-left: 5px;
+    }
+
+    #capa {
+        height: 40vh;
+        padding: 90px 0;
+    }
+
+    #capa h1 {
+        color: #ffc107;
+        font-size: 2.2em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #capa h3 {
+        color: white;
+        font-size: 1.6em;
+        text-align: center;
+        font-weight: 700;
+    }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+
+    #logo {
+        width: 60px;
+    }
+
+    header,
+    .navbar {
+        padding: 0 20px;
+    }
+
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-left: 5px;
+    }
+
+    #capa {
+        height: 50vh;
+        padding: 130px 0;
+    }
+
+    #capa h1 {
+        color: #ffc107;
+        font-size: 2.6em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #capa h3 {
+        color: white;
+        font-size: 1.9em;
+        text-align: center;
+        font-weight: 700;
+    }
+}
 
 
