--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Global Styles */
-body {
+body h1, h3, h4, h5, h6, p, li {
     font-family: "Montserrat", sans-serif;
 }
 
@@ -10,7 +10,7 @@ header {
 }
 
 #logo {
-    width: 75px;
+    width: 155px;
 }
 
 .navbar {
@@ -28,6 +28,7 @@ header {
     cursor: pointer;
     height: 30px;
     color: #fff;
+    font-family: "Montserrat", sans-serif;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link::after {
@@ -63,11 +64,69 @@ header {
 }
 
 
+/*Section Planos*/
+
+#planos-menu h1 {
+    font-weight: 700;
+    text-align: center;
+    margin-top: 40px;
+    padding-top: 10px;
+}
+
+#planos-menu p{
+    font-size: 14px;
+    text-align: center;
+    padding: 0;
+}
+
+
+
+.hidden{
+    opacity: 0;
+    transition: all 2s;
+    transform: translateX(-100%);
+}
+
+
+.show{
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
+
+@media(prefers-reduced-motion){
+    .hidden {
+        transition: none;
+    }
+}
+
+.card-plan ol{
+    padding: 0;
+}
+.card-plan li{
+    list-style: none;
+    font-size: 13px;
+    margin-bottom: 5px;
+}
+
+.card-plan h4{
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 10px;
+    font-weight: 600;
+    border-bottom: 1px solid #ffc107;
+}
+
+#planos #pagamento{
+    font-size: 10px;
+}
+
 
 /* Breakpoints */
 @media (min-width: 281px) and (max-width: 369px) {
     #logo {
-        width: 45px;
+        width: 50px;
     }
 
     header,
@@ -96,6 +155,13 @@ header {
         font-size: 0.6em;
         text-align: center;
         font-weight: 700;
+    }
+
+
+    /*Section Planos*/
+
+    #planos-menu h1 {
+        font-size: 0.5em;
     }
 
 
@@ -135,7 +201,51 @@ header {
         font-weight: 700;
     }
 
+    /*Section Planos*/
+    #planos{
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
+    #planos-menu h1 {
+        font-size: 1.5em;
+    }
+    
+    #planos .card{
+        border: none;
+    }
+    .card-plan{
+        border: 3px solid #ffc107;
+        border-radius: 7px;
+        height: 22em;
+        width: 18em;
+        padding: 10px 15px;
+        margin-top: 20px;
+    }
+
+    .card-plan #recomendado{
+        width: 120px;
+        border-radius: 5px;
+        position: relative;
+        top: -23px;
+        left: -18px;
+        background-color: #ffc107;
+        color: #fff;
+        font-weight: 600;
+        margin: 0px;
+
+    }
+    .card-plan h5{
+        margin-top: 0px;
+    }
+
+    .card-plan li{
+        font-size: 13px;
+    }
+
+    
 }
 
 
@@ -179,7 +289,7 @@ header {
 /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) {
     #logo {
-        width: 55px;
+        width: 60px;
     }
 
     header,
@@ -215,7 +325,7 @@ header {
 @media (min-width: 992px) {
 
     #logo {
-        width: 60px;
+        width: 75px;
     }
 
     header,
@@ -246,5 +356,3 @@ header {
         font-weight: 700;
     }
 }
-
-
