--- a/css/style.css
+++ b/css/style.css
@@ -187,22 +187,34 @@ header {
 
 
 
-
-
-
-
-
 /*Modalidades*/
 
 
 #modalidades {
-    border: 1px solid red;
     padding: 15px;
 }
 
-#modalidades h1 {
+#modalidades-title h1 {
     font-weight: 700;
     text-align: center;
+    font-size: 1.7em;
+    
+}
+
+#modalidades-title p{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 13px;
+}
+
+#modalidades .card{
+    border-radius: 7px;
+    margin-bottom: 15px;
+}
+
+.card-img, .card-img-bottom, .card-img-top {
+    width: 100%;
+    height: 190px;
 }
 
 
@@ -288,22 +300,12 @@ header {
     /*Section Planos*/
 
 
-
-
-
-
-
-
-
-
-
     /*Modalidades*/
 
 
     #modalidades {
-        border: 1px solid red;
         padding: 15px;
-        margin-top: 50px;
+        margin: 50px 0px;
     }
 
 
@@ -381,6 +383,14 @@ header {
         text-align: center;
         font-weight: 700;
     }
+
+    
+    #modalidades .card{
+        border-radius: 7px;
+        margin-bottom: 35px;
+    }
+
+
 }
 
 /*Large devices (desktops, 992px and up)*/
@@ -416,5 +426,10 @@ header {
         font-size: 1.9em;
         text-align: center;
         font-weight: 700;
+    }
+
+    #modalidades .card{
+        border-radius: 7px;
+        margin-bottom: 55px;
     }
 }
