--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,19 @@ header {
 }
 
 
+.card-plan:hover{
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.1);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.1);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.1);
+    transition: all 250ms ease-in;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+
 
 /*Modalidades*/
 
